Create a teste to measure the performance of the solution