@@ -15,6 +15,21 @@
         <maven.compiler.release>25</maven.compiler.release>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>br.rinha</groupId>
+            <artifactId>indexer</artifactId>
+            <version>0.1.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.11.3</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <build>
         <finalName>api</finalName>
         <plugins>
@@ -37,6 +52,13 @@
                             <mainClass>rinha.Api</mainClass>
                         </manifest>
                     </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.3</version>
+                <configuration>
+                    <argLine>--add-modules=jdk.incubator.vector --enable-native-access=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
         </plugins>
